added header and nav content

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
   <header>
+    <h1><b>Beetroot</b> <i>(Beta vulgaris)</i></h1>
+    <nav>
+      <ol>
+        <li><a href="#comvar">Comon varieties</a></li>
+        <li><a href="#nuinf">Nutritional information</a></li>
+        <li><a href="#tags">Tags</a></li>
+      </ol>
+    </nav>
   </header>
   <body>
 </body>
