added image figure

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
       </ol>
     </nav>
   </header>
+
   <body>
+    <figure>
+      <img src="images/beets.jpg" alt="">
+      <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
+    </figure>
+
 </body>
 <footer>
 </footer>
