--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
     <p>In fact, <cite>Jim Halpert</cite> once said this about beets, <q>“Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i>”</q>.</p>
 
     <blockquote><p>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.<br>— <cite>Chris Pratt</cite></br></p></blockquote>
+
+    <h2 id="comvar">Common varieties</h2>
+      <ol>
+        <li>Albino</li>
+        <li>Bull's Blood</li>
+        <li>Chioggia</li>
+        <li>Detroit Dark Red</li>
+        <li>Early Wonder</li>
+      </ol>
 </body>
 <footer>
 </footer>
