--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
         <li>Detroit Dark Red</li>
         <li>Early Wonder</li>
       </ol>
+
+    <h2 id="nuinf">Nutritional information</h2>
+      <p>Serving size: <data>100 g</data></p>
+      <ul>
+        <li>Energy: <data>180 kJ</data></li>
+        <li>Carbohydrates: <data>9.96 g</data></li>
+        <li>Fat: <data>0.18 g</data></li>
+        <li>Protein: <data>1.68 g</data></li>
+      </ul>
 </body>
 <footer>
 </footer>
