--- a/index.html
+++ b/index.html
@@ -46,6 +46,15 @@
         <li>Fat: <data>0.18 g</data></li>
         <li>Protein: <data>1.68 g</data></li>
       </ul>
+  <h2 id="tags">Tags</h2>
+    <ul>
+      <li>Crimson</li>
+      <li>Awesome</li>
+      <li>Pickle-able</li>
+      <li>Vegetable!</li>
+      <li>Delicious</li>
+    </ul>
+
 </body>
 <footer>
 </footer>
