added article tags

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Killa-beets</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
+<article>
   <header>
     <h1><b>Beetroot</b> <i>(Beta vulgaris)</i></h1>
     <nav>
@@ -46,6 +47,9 @@
         <li>Fat: <data>0.18 g</data></li>
         <li>Protein: <data>1.68 g</data></li>
       </ul>
+
+  </article>
+
   <h2 id="tags">Tags</h2>
     <ul>
       <li>Crimson</li>
