--- a/index.html
+++ b/index.html
@@ -61,5 +61,6 @@
 
 </body>
 <footer>
+  <small><p>Source: <a href="https://en.wikipedia.org">Wikipedia</a>; Last modified: Aug 30, 2014</p></small>
 </footer>
 </html>
