added values to data, fixed bad tags

--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
       <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
     </figure>
 
-    <p><data>55 to 65 days</data> are needed from germination to harvest of the root.</p>
+    <p><data value="55-65">55 to 65 days</data> are needed from germination to harvest of the root.</p>
     <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
     <p>In fact, <cite>Jim Halpert</cite> once said this about beets, <q>“Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i>”</q>.</p>
 
-    <blockquote><p>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.<br>— <cite>Chris Pratt</cite></br></p></blockquote>
+    <blockquote><p>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.<br>— <cite>Chris Pratt</cite></p></blockquote>
 
     <h2 id="comvar">Common varieties</h2>
       <ol>
@@ -40,12 +40,12 @@
       </ol>
 
     <h2 id="nuinf">Nutritional information</h2>
-      <p>Serving size: <data>100 g</data></p>
+      <p>Serving size: <data value="100">100 g</data></p>
       <ul>
-        <li>Energy: <data>180 kJ</data></li>
-        <li>Carbohydrates: <data>9.96 g</data></li>
-        <li>Fat: <data>0.18 g</data></li>
-        <li>Protein: <data>1.68 g</data></li>
+        <li>Energy: <data value="180">180 kJ</data></li>
+        <li>Carbohydrates: <data value="9.96">9.96 g</data></li>
+        <li>Fat: <data value="0.18">0.18 g</data></li>
+        <li>Protein: <data value="1.68">1.68 g</data></li>
       </ul>
 
   </article>
@@ -61,6 +61,6 @@
 
 </body>
 <footer>
-  <small><p>Source: <a href="https://en.wikipedia.org">Wikipedia</a>; Last modified: Aug 30, 2014</p></small>
+  <small>Source: <a href="https://en.wikipedia.org">Wikipedia</a>; Last modified: Aug 30, 2014</small>
 </footer>
 </html>
