moved body tag and added main tags

--- a/index.html
+++ b/index.html
@@ -6,19 +6,20 @@
   <title>Killa-beets</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
-<article>
-  <header>
-    <h1><b>Beetroot</b> <i>(Beta vulgaris)</i></h1>
-    <nav>
-      <ol>
-        <li><a href="#comvar">Comon varieties</a></li>
-        <li><a href="#nuinf">Nutritional information</a></li>
-        <li><a href="#tags">Tags</a></li>
-      </ol>
-    </nav>
-  </header>
+<body>
+  <article>
+    <header>
+      <h1><b>Beetroot</b> <i>(Beta vulgaris)</i></h1>
+      <nav>
+        <ol>
+          <li><a href="#comvar">Comon varieties</a></li>
+          <li><a href="#nuinf">Nutritional information</a></li>
+          <li><a href="#tags">Tags</a></li>
+        </ol>
+      </nav>
+    </header>
 
-  <body>
+  <main>
     <figure>
       <img src="images/beets.jpg" alt="">
       <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
@@ -58,7 +59,8 @@
       <li>Vegetable!</li>
       <li>Delicious</li>
     </ul>
-
+  </main>
+  
 </body>
 <footer>
   <small>Source: <a href="https://en.wikipedia.org">Wikipedia</a>; Last modified: Aug 30, 2014</small>
