--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
       <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
     </figure>
 
-    <p><data value="55-65">55 to 65 days</data> are needed from germination to harvest of the root.</p>
+    <p><time value="55-65">55 to 65 days</time> are needed from germination to harvest of the root.</p>
     <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
     <p>In fact, <cite>Jim Halpert</cite> once said this about beets, <q>“Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i>”</q>.</p>
 
-    <blockquote><p>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.<br>— <cite>Chris Pratt</cite></p></blockquote>
+    <blockquote>
+      <p>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.<br>— <cite>Chris Pratt</cite></p>
+    </blockquote>
 
     <h2 id="comvar">Common varieties</h2>
       <ol>
@@ -42,23 +44,25 @@
 
     <h2 id="nuinf">Nutritional information</h2>
       <p>Serving size: <data value="100">100 g</data></p>
-      <ul>
-        <li>Energy: <data value="180">180 kJ</data></li>
-        <li>Carbohydrates: <data value="9.96">9.96 g</data></li>
-        <li>Fat: <data value="0.18">0.18 g</data></li>
-        <li>Protein: <data value="1.68">1.68 g</data></li>
-      </ul>
+      <dl>
+        <li><dt>Energy:</dt> <dd><data value="180">180 kJ</data></dd></li>
+        <li><dt>Carbohydrates:</dt> <dd><data value="9.96">9.96 g</data></dd></li>
+        <li><dt>Fat:</dt> <dd><data value="0.18">0.18 g</data></dd></li>
+        <li><dt>Protein:</dt> <dd><data value="1.68">1.68 g</data></dd></li>
+      </dl>
 
   </article>
 
-  <h2 id="tags">Tags</h2>
-    <ul>
-      <li>Crimson</li>
-      <li>Awesome</li>
-      <li>Pickle-able</li>
-      <li>Vegetable!</li>
-      <li>Delicious</li>
-    </ul>
+  <aside>
+    <h2 id="tags">Tags</h2>
+      <ul>
+        <li>Crimson</li>
+        <li>Awesome</li>
+        <li>Pickle-able</li>
+        <li>Vegetable!</li>
+        <li>Delicious</li>
+      </ul>
+  </aside>
 
   <footer>
     <small>Source: <a href="https://en.wikipedia.org">Wikipedia</a>; Last modified: Aug 30, 2014</small>
